// Copyright 2026 Yellowbrick Data, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package ai.floedb.floecat.catalog;

option java_multiple_files = true;
option java_package = "ai.floedb.floecat.catalog.rpc";

import "common/common.proto";
import "google/protobuf/timestamp.proto";
import "catalog/partition.proto";
import "google/protobuf/field_mask.proto";

// ----- Snapshot -----

message Snapshot {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  google.protobuf.Timestamp upstream_created_at = 3;
  google.protobuf.Timestamp ingested_at = 4;
  int64 parent_snapshot_id = 5;
  string schema_json = 6;
  PartitionSpecInfo partition_spec = 7;
  int64 sequence_number = 8;
  string manifest_list = 9;
  map<string,string> summary = 10;
  int32 schema_id = 11;
  map<string, bytes> format_metadata = 12;
}

message ListSnapshotsRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  ai.floedb.floecat.common.PageRequest page = 2;
}
message ListSnapshotsResponse {
  repeated Snapshot snapshots = 1;
  ai.floedb.floecat.common.PageResponse page = 2;
}

message GetSnapshotRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  ai.floedb.floecat.common.SnapshotRef snapshot = 2;
}
message GetSnapshotResponse {
  Snapshot snapshot = 1;
}

message SnapshotSpec {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  google.protobuf.Timestamp upstream_created_at = 3;
  google.protobuf.Timestamp ingested_at = 4;
  int64 parent_snapshot_id = 5;
  optional string schema_json = 6;
  PartitionSpecInfo partition_spec = 7;
  optional int64 sequence_number = 8;
  optional string manifest_list = 9;
  map<string,string> summary = 10;
  optional int32 schema_id = 11;
  map<string, bytes> format_metadata = 12;
}

message CreateSnapshotRequest {
  SnapshotSpec spec = 1;
  ai.floedb.floecat.common.IdempotencyKey idempotency = 2;
}
message CreateSnapshotResponse {
  Snapshot snapshot = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

message DeleteSnapshotRequest {
  ai.floedb.floecat.common.ResourceId table_id = 1;
  int64 snapshot_id = 2;
  ai.floedb.floecat.common.Precondition precondition = 3;
}
message DeleteSnapshotResponse {
  ai.floedb.floecat.common.MutationMeta meta = 1;
}

message UpdateSnapshotRequest {
  SnapshotSpec spec = 1;
  ai.floedb.floecat.common.Precondition precondition = 2;
  google.protobuf.FieldMask update_mask = 3;
}
message UpdateSnapshotResponse {
  Snapshot snapshot = 1;
  ai.floedb.floecat.common.MutationMeta meta = 2;
}

// ----- Services -----

service SnapshotService {
  rpc ListSnapshots(ListSnapshotsRequest) returns (ListSnapshotsResponse);
  rpc GetSnapshot(GetSnapshotRequest) returns (GetSnapshotResponse);
  rpc CreateSnapshot(CreateSnapshotRequest) returns (CreateSnapshotResponse);
  rpc DeleteSnapshot(DeleteSnapshotRequest) returns (DeleteSnapshotResponse);
  rpc UpdateSnapshot(UpdateSnapshotRequest) returns (UpdateSnapshotResponse);
}
